[package]
name = "kalc"
description = "a complex numbers, 2d/3d graphing, arbitrary precision, vector/matrix, cli calculator with real-time output and support for units"
license = "GPL-3.0-only"
authors = ["bgkillas <mswalhelm@gmail.com>"]
readme = "README.md"
keywords = ["cli", "calculator"]
categories = ["command-line-interface", "command-line-utilities", "mathematics"]
repository = "https://github.com/bgkillas/kalc"
rust-version = "1.85.0"
version = "1.4.3"
edition = "2024"

[features]
default=["bin-deps"]
bin-deps=["dep:crossterm","dep:dirs","dep:term_size","dep:libc"]

[profile.release]
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
fastrand = "2.0.2"
rug = "1.24.1"
rayon = "1.10.0"
crossterm = {version="0.28.1",optional=true}
dirs = {version="6.0.0",optional=true}

[target.'cfg(not(unix))'.dependencies]
term_size = {version="0.3.2",optional=true}

[target.'cfg(unix)'.dependencies]
libc = {version="0.2.169",optional=true}

[dependencies.gmp-mpfr-sys]
version = "1.6.4"
features = ["force-cross"]