[package]
name = "kalc"
description = "a complex numbers, 2d/3d graphing, arbitrary precision, vector/matrix, cli calculator with real-time output and support for units"
license = "GPL-3.0-only"
authors = ["bgkillas <mswalhelm@gmail.com>"]
keywords = ["cli", "calculator"]
categories = ["command-line-interface", "command-line-utilities", "mathematics"]
repository = "https://github.com/bgkillas/kalc"
rust-version = "1.85.0"
version = "1.4.3"
edition = "2024"

[profile.release]
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
kalc-lib = {git="https://github.com/bgkillas/kalc-lib", features=["bin-deps"]}