[package]
name = "kalc"
description = "a complex numbers, 2d/3d graphing, arbitrary precision, vector/matrix, cli calculator with real-time output and support for units"
license = "GPL-3.0-only"
authors = ["bgkillas <mswalhelm@gmail.com>"]
keywords = ["cli", "calculator"]
categories = ["command-line-interface", "command-line-utilities", "mathematics"]
repository = "https://github.com/bgkillas/kalc"
rust-version = "1.85.0"
version = "1.5.0"
edition = "2024"

[features]
default=["serde", "rayon", "rug", "fastnum","gnuplot","kalc-plot"]
force-cross=["kalc-lib/force-cross"]
system-libs=["kalc-lib/system-libs"]
serde=["kalc-lib/serde", "dep:bitcode"]
rayon=["kalc-lib/rayon"]
rug=["kalc-lib/rug"]
fastnum=["kalc-lib/fastnum"]
gnuplot=["kalc-lib/gnuplot"]
kalc-plot=[]

[profile.release]
lto = true
strip = true
panic = "abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1

[profile.dev]
opt-level = 1

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
bitcode = {version="0.6.6", features = ["serde"], optional = true}
kalc-lib = {version = "1.5.0", path="../kalc-lib", default-features = false, features=["bin-deps","fastrand"]}